--- a/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
+++ b/EpicSchoolHomework/Views/Profile/UserProfileViewController.xib
@@ -30,9 +30,11 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="82e-mV-Hhb">
-                    <rect key="frame" x="163.5" y="505.5" width="87.5" height="31"/>
+                    <rect key="frame" x="142" y="505.5" width="130.5" height="44"/>
                     <state key="normal" title="Button"/>
-                    <buttonConfiguration key="configuration" style="plain" title="К фоткам"/>
+                    <buttonConfiguration key="configuration" style="plain" title="К фоткам">
+                        <fontDescription key="titleFontDescription" style="UICTFontTextStyleTitle1"/>
+                    </buttonConfiguration>
                     <connections>
                         <action selector="navigateToPhotoListTapped:" destination="-1" eventType="touchUpInside" id="6Dt-OG-ATW"/>
                     </connections>
@@ -77,7 +79,7 @@
                                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nQl-Th-Mpi">
                                             <rect key="frame" x="89.5" y="0.0" width="148" height="34"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" textContentType="new-password"/>
+                                            <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                         </textField>
                                     </subviews>
                                 </stackView>
